Cpd 57 add clustering for cargo orders (#27)
* CPD-57 Add endpoint for order clustering

* CPD-57 Add clustering option for orders

* Bump to v0.5.5
